# Submarine

./: .gitattributes  .gitignore  .gitmodules  Description Doc.docx  README.md  app_list.txt  bitbucket-pipelines.yml  build.sh  mount_pi.sh  post-merge  rc.local  redis.conf  start.bat  workspace.code-workspace
gullrock/: CMakeLists.txt  Makefile
gullrock/apps/app_manager/: CMakeLists.txt  README.md  app_manager.c
gullrock/apps/app_manager/src/: app_manager.c  main.c
gullrock/apps/camera_controller/: CMakeLists.txt  Makefile  README.md  camera.c  camera.h  camera_controller.c
gullrock/apps/camera_controller/include/: camera.h
gullrock/apps/camera_controller/src/: camera.c  camera_controller.c  main.c
gullrock/apps/config_controller/: CMakeLists.txt  generate_sw_config.py  test.json
gullrock/apps/config_controller/src/: config_controller.c  file_crc.h  main.c
gullrock/apps/config_manager/: CMakeLists.txt  README.md
gullrock/apps/config_manager/src/: main.c
gullrock/apps/factory/: README.md
gullrock/apps/gui/: README.md  control.py  db_test.py  gamepad.py  main.py  requirements.txt
gullrock/apps/gui/src/: README.md  definitions.py  main.py  worker.py
gullrock/apps/gui/src/widgets/: video.py
gullrock/apps/gui/widgets/: hud.py  video.py
gullrock/apps/io_controller/: CMakeLists.txt  Makefile  README.md  imu.h  io_controller.c  light.c
gullrock/apps/io_controller/include/: imu.h  light.h
gullrock/apps/io_controller/src/: imu.c  io_controller.c  light.c  main.c
gullrock/apps/mcu_manager/: CMakeLists.txt  Makefile  Makefile.old  README.md  mcu.c  mcu.h  mcu_manager.c
gullrock/apps/mcu_manager/include/: mcu.h
gullrock/apps/mcu_manager/src/: main.c  mcu.c  mcu_manager.c
gullrock/apps/motion_controller/: Makefile  motion_controller.c  motor.c  motor.h
gullrock/apps/motion_controller/src/: motion_controller.c  motor.c
gullrock/common/: baseapp.c  baseapp.h  common.c  common.h  hdlc_def.c  hdlc_def.h  redis_def.c  redis_def.h
gullrock/common/include/: baseapp.h  common.h  hdlc_def.h  redis.h  redis_def.h
gullrock/common/src/: baseapp.c  common.c  redis.c  redis_def.c
gullrock/drivers/include/: iostat.h  vcgencmd.h
gullrock/drivers/src/: iostat.c  vcgencmd.c
gullrock/firmware/SerialInterrupt/: SerialInterrupt.ino  hdlc.h  redis.h
gullrock/firmware/controller_testing/: controller_testing.ino
gullrock/firmware/libraries/CameraControl/: CameraControl.cpp  CameraControl.h
gullrock/firmware/libraries/MC33926Driver/: MC33926Driver.cpp  MC33926Driver.h  README.md  keywords.txt  library.properties
gullrock/firmware/libraries/Sensors/: Sensors.cpp  Sensors.h
gullrock/firmware/runtime/: arduino-cli.yaml  command_handler.cpp  command_handler.h  compile.sh  crc.h  def.cpp  def.h  runtime.ino  sensors.cpp  sensors.h  setup.sh
gullrock/libs/libevent/: Makefile  Makefile.in  aclocal.m4  buffer.lo  bufferevent.lo  bufferevent_filter.lo  bufferevent_pair.lo  bufferevent_ratelim.lo  bufferevent_sock.lo  config.h  config.h.in  config.status  configure  epoll.lo  evdns.lo  event_tagging.lo  evmap.lo  evrpc.lo  evthread.lo  evthread_pthread.lo  evutil.lo  evutil_rand.lo  evutil_time.lo  http.lo  libevent.la  libevent.pc  libevent_core.la  libevent_core.pc  libevent_extra.la  libevent_extra.pc  libevent_mbedtls.pc  libevent_openssl.la  libevent_openssl.pc  libevent_openssl_la-bufferevent_openssl.lo  libevent_openssl_la-bufferevent_ssl.lo  libevent_pthreads.la  libevent_pthreads.pc  libtool  listener.lo  log.lo  (+5 more)
gullrock/libs/libevent/.deps/: buffer.Plo  bufferevent.Plo  bufferevent_filter.Plo  bufferevent_pair.Plo  bufferevent_ratelim.Plo  bufferevent_sock.Plo  epoll.Plo  evdns.Plo  event.Plo  event_tagging.Plo  evmap.Plo  evrpc.Plo  evthread.Plo  evthread_pthread.Plo  evutil.Plo  evutil_rand.Plo  evutil_time.Plo  http.Plo  libevent_openssl_la-bufferevent_openssl.Plo  libevent_openssl_la-bufferevent_ssl.Plo  listener.Plo  log.Plo  poll.Plo  select.Plo  signal.Plo  strlcpy.Plo  watch.Plo
gullrock/libs/libevent/.libs/: libevent-2.1.so.7.0.1  libevent.lai  libevent_core-2.1.so.7.0.1  libevent_core.lai  libevent_extra-2.1.so.7.0.1  libevent_extra.lai  libevent_pthreads-2.1.so.7.0.1  libevent_pthreads.lai
gullrock/libs/libevent/autom4te.cache/: output.1  requests  traces.0  traces.1  traces.2
gullrock/libs/libevent/include/event2/: event-config.h
gullrock/libs/libevent/sample/: becat  dns-example  event-read-fifo  hello-world  http-connect  http-server  https-client  le-proxy  signal-test  time-test  watch-timing
gullrock/libs/libevent/sample/.deps/: becat-becat.Po  dns-example.Po  event-read-fifo.Po  hello-world.Po  http-connect.Po  http-server.Po  https_client-hostcheck.Po  https_client-https-client.Po  https_client-openssl_hostname_validation.Po  le_proxy-le-proxy.Po  signal-test.Po  time-test.Po  watch-timing.Po
gullrock/libs/libevent/sample/.libs/: becat  dns-example  event-read-fifo  hello-world  http-connect  http-server  https-client  le-proxy  signal-test  time-test  watch-timing
gullrock/libs/libevent/test/: bench  bench_cascade  bench_http  bench_httpclient  regress  rpcgen-attempted  test-changelist  test-closed  test-dumpevents  test-eof  test-fdleak  test-init  test-ratelim  test-time  test-weof
gullrock/libs/libevent/test/.deps/: bench.Po  bench_cascade.Po  (+30 more)
gullrock/libs/libserialport/: Makefile  Makefile.in  aclocal.m4  config.h  config.h.in  config.status  configure  libserialport.la  libtool  linux.lo  linux_termios.lo  serialport.lo  timing.lo
gullrock/libs/libserialport/.deps/: linux.Plo  linux_termios.Plo  serialport.Plo  timing.Plo
gullrock/libs/libserialport/.libs/: libserialport.lai  libserialport.so.0.1.0
gullrock/libs/libserialport/autom4te.cache/: output.2  requests  traces.0  traces.1  traces.2
gullrock/libs/linux-mpu9150/: Makefile-lib  imu.c
gullrock/libs/logger/: Makefile
gullrock/libs/minihdlc/: Makefile  minihdlc.c  minihdlc.h
gullrock/scripts/: bitbucket-mirror.sh  build.py  build_setup.sh  generate_sw_config.py  setup.sh  test.json
gullrock/scripts/networking/: dhcpd.conf  vlans
(+282 files in other folders)
